exercice realise controller router model et doc ok
